# AdvProg1-5

./: CMakeLists.txt  README.md  makefile
IO/: DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp
KnnClient/: CMakeLists.txt  KnnClient.cpp  KnnClientPrototype5.cpp  client.out  makefile
KnnServer/: CLI.h  CMakeLists.txt  Client.cpp  Client.h  ClientData.cpp  ClientData.h  Command.h  MainDistance.cpp  MainDistance.h  TypeVector.cpp  TypeVector.h  knnServer.cpp  knnServer.h  makefile  server.out
KnnServer/Command/: AlgoSettings.h  ClassifyData.cpp  Command.h  SendData.h  SendSaveData.h  SendnSaveData.h  UploadData.cpp
KnnServer/IO/: DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.h
